[package]
name = "baby_sensor"
version = "0.1.0"
authors = ["MARTEL, Loïc <loic.martel@cgi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"