[package]
name = "baby_sensor"
version = "0.1.0"
authors = ["MARTEL, Loïc <loic.martel@cgi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"

[dependencies]
structopt = "0.3.13"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }